--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -1,3 +1,40 @@
 .cardcontainer {
-  background-color: red;
+  /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 250px;
+  border: 1px solid black;
+  border-radius: 40px;
+  border-style: hidden;
+}
+
+.cardimage {
+  display: block;
+  height: 60%;
+  width: 100%;
+  background-color: yellow;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+}
+
+.cardtitle {
+  display: flex;
+  height: 20%;
+  width: 100%;
+  background-color: aliceblue;
+}
+
+.cardtools {
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  width: 100%;
+  background-color: antiquewhite;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+}
+.cardtools_shoppingcart {
+  justify-self: center;
+  align-self: flex-end;
 }
