--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -30,6 +30,9 @@
   height: 20%;
   width: 100%;
   background-color: aliceblue;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
 }
 
 .cardtools {
