database almost done, figuring out src shit

--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -4,13 +4,14 @@
   gap: 2.5%;
   height: 400px;
   width: 100%;
+  overflow-y: hidden;
 }
 .cardcontainer {
   /* background-color: red; */
   display: flex;
   flex-direction: column;
-  height: 300px;
-  width: 250px;
+  min-height: 300px;
+  min-width: 250px;
   border: 1px solid black;
   border-radius: 40px;
   border-style: hidden;
@@ -18,9 +19,13 @@
 
 .cardimage {
   display: block;
-  height: 60%;
+  height: 200px;
   width: 100%;
   background-color: yellow;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+}
+.cardimage * {
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
 }
