--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   gap: 2.5%;
-  height: 400px;
+  /* height: auto; */
   width: 100%;
   overflow-y: hidden;
 }
