layout as intended, added style to body for width and height.

--- a/app/components/HomeBillboard.module.css
+++ b/app/components/HomeBillboard.module.css
@@ -3,4 +3,11 @@
   background-color: red;
   height: 50%;
   width: 100%;
+  border: 1px solid black;
+}
+
+.billboardcontainer2 {
+  height: 25%;
+  background-color: aliceblue;
+  overflow: hidden;
 }
