--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -12,9 +12,7 @@
   flex-direction: column;
   min-height: 300px;
   min-width: 250px;
-  border: 1px solid black;
   border-radius: 40px;
-  border-style: hidden;
 }
 
 .cardimage {
@@ -42,14 +40,12 @@
 
 .cardtools {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 20%;
   width: 100%;
   background-color: antiquewhite;
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
-}
-.cardtools_shoppingcart {
-  justify-self: center;
-  align-self: flex-end;
+  justify-content: space-around;
+  align-items: center;
 }
